Fixes home button spacing

--- a/src/webviews/apps/home/home.scss
+++ b/src/webviews/apps/home/home.scss
@@ -528,6 +528,12 @@ gl-button.is-basic {
 	}
 }
 
+.button-container--trio {
+	> gl-button:first-child {
+		margin-bottom: 0.4rem;
+	}
+}
+
 .button-group {
 	display: inline-flex;
 	gap: 0.4rem;
@@ -549,16 +555,6 @@ gl-button.is-basic {
 			border-bottom-right-radius: 0;
 		}
 	}
-}
-
-.sticky {
-	background-color: var(--color-view-background);
-	position: -webkit-sticky;
-	position: sticky;
-	top: -1px;
-	z-index: 2;
-	padding-top: 1px;
-	padding-bottom: 1px;
 }
 
 .t-eyebrow.sticky {
